apply plugin: 'java'

version '1.41'

sourceCompatibility = 1.9

repositories {
	jcenter()
}

dependencies {
	compile 'com.google.guava:guava:25.0-jre'
	compile 'org.json:json:20180813'
	
	compile 'net.dv8tion:JDA:4.2.0_175'
}

compileJava {
	options.encoding = 'UTF-8'
}

javadoc {
    options.encoding = 'UTF-8'
}

task sourcesJar(type: Jar, dependsOn: classes) {
	classifier = 'sources'
	from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
	classifier = 'javadoc'
	from javadoc.destinationDir
}

artifacts {
	archives sourcesJar
	archives javadocJar
}